# glitter

./: .appveyor.yml  .gitignore  .pre-commit.sh  Cargo.toml  README.md  slides.md
benches/: git_status.rs  interpreter.rs  parser.rs
glitter-lang/: Cargo.toml
glitter-lang/src/: lib.rs
lib/: ast.rs  color.rs  git.rs  interpreter.rs  lib.rs  parser.rs
lib/parser/: combinator.rs
proptest-regressions/: parser.txt
src/: ast.rs  git.rs  interpreter.rs  main.rs  parser.rs
