[package]
name = "glit"
version = "0.1.4"
authors = ["Gwen Lofman <Gwen@Lofman.io>"]
description = "A utility for pretty-printing git stats"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/glfmn/glitter"
keywords = ["DSL", "git", "gist", "status", "pretty-printing"]
exclude = [
    "img/*.gif"
]
edition = "2018"

[lib]
name = "glitter_lang"
path = "lib/lib.rs"
bench = true

[dependencies]
clap = "~2.29"
git2 = "0.9"
ansi_term = "0.11"
nom = "^3.2"

[patch.crates-io]
ansi_term = { git = "https://github.com/glfmn/rust-ansi-term", branch = "escape_sequence" }

[dev-dependencies]
proptest = "0.8.6"
criterion = "0.2"

[[bench]]
name = "interpreter"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true
