[package]
name = "glit"
version = "0.3.0"
authors = ["Gwen Lofman <Gwen@Lofman.io>"]
description = "A utility for pretty-printing git stats"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/glfmn/glitter"
homepage = "https://github.com/glfmn/glitter"
keywords = ["DSL", "git", "gist", "status", "pretty-printing"]
exclude = [
    "img/*.gif"
]
edition = "2018"

[lib]
name = "glitter_lang"
path = "lib/lib.rs"
bench = true

[dependencies]
structopt = "0.2.18"
git2 = "0.9"
nom = "^5.0.1"
human-panic = "1.0.1"
yansi = "0.5"

[dev-dependencies]
proptest = "0.8.6"
criterion = "0.3"

[[bench]]
name = "interpreter"
harness = false

[[bench]]
name = "parser"
harness = false

[profile.release]
debug = true

[profile.bench]
debug = true

[package.metadata.deb]
maintainer = "Gwen Lofman <launchpad@glfmn.io>"
license-file = ["LICENSE"]
extended-description = """\
A git utility for creating informative prompts; it can embed git status
information in arbitrary formats with ease on any platform.  """
depends = "$auto"
section = "git"
priority = "optional"
assets = [
    ["target/release/glit", "usr/bin/", "755"],
]
